# alimentador-gato-esp32c3

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
main/: CMakeLists.txt  app_config.h  main.c  schedule.c  schedule.h  secrets.h.example  servo.c  servo.h  telegram.c  telegram.h  time_sync.c  time_sync.h  wifi.c  wifi.h
